manifests/overlays/staging/class-management-fe/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: class-management-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-management-fe
  template:
    metadata:
      labels:
        app: class-management-fe
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: class-management-fe-container
          image: harbor.th1enlm02.live/staging/class-management-fe:ac4ef60-1734377275 # {"$imagepolicy": "staging:frontend-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
